# max-exchange-api-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: get_currencies.rs  rest_auth.rs  ws_auth.rs  ws_client.rs
resource/test/rest/auth/: auth_fail.yaml  auth_success.yaml
resource/test/rest/private/deposit/: create_deposit_addresses.yaml  get_deposit_addresses.yaml  get_deposit_detail.yaml  get_deposits.yaml
resource/test/rest/private/misc/: get_account_of_currency.yaml  get_internal_transfers.yaml  get_max_rewards_yesterday.yaml  get_profile.yaml  get_profile_and_account.yaml  get_rewards.yaml  get_rewards_of_type.yaml  get_saving_interest_history.yaml  get_transfers_by_uuid.yaml  get_vip_level.yaml
resource/test/rest/private/order/: clear_order.yaml  create_order.yaml  delete_order.yaml  get_all_orders.yaml  get_single_order.yaml
resource/test/rest/private/trade/: get_all_trades.yaml  get_single_trade.yaml
resource/test/rest/private/withdrawal/: create_withdrawal.yaml  get_all_withdrawal.yaml  get_single_withdrawal.yaml  get_withdraw_addresses.yaml
resource/test/rest/public/market/: get_depth.yaml  get_markets.yaml  get_ohlc.yaml  get_public_trades.yaml  get_summary.yaml  get_ticker_of_market.yaml  get_tickers.yaml
resource/test/rest/public/misc/: get_currencies.yaml  (+4 more)
src/: error.rs  lib.rs  util.rs
src/v2/: mod.rs
src/v2/rest/: internal.rs  mod.rs
src/v2/rest/private/: deposit.rs  misc.rs  mod.rs  order.rs  trade.rs  withdrawal.rs
src/v2/rest/public/: market.rs  misc.rs  mod.rs
src/v2/ws/: feed.rs  mod.rs
