[package]
name = "maicoin_max"
version = "2.0.2"
authors = ["Raphanus Lo <coldturnip@gmail.com>"]
homepage = "https://github.com/COLDTURNIP/max-exchange-api-rs"
repository = "https://github.com/COLDTURNIP/max-exchange-api-rs"
edition = "2018"
license-file = "LICENSE"

description = "MaiCoin Max API client for Rust"
categories = ["api-bindings", "cryptography::cryptocurrencies"]
keywords = ["exchange", "maicoin", "maicoin-max", "cryptocurrencies", "bitcoin"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.2"
hmac = "0.11"
http-types = "2.12.0"
rust_decimal = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
sha2 = "0.9"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
async-stream = "0.3"
async-tungstenite = { version = "0.16", features = ["async-tls", "async-std-runtime"] }
env_logger = "0.9"
futures = { version = "0.3" }
lazy_static = "1.4"
log = "0.4"
rust_decimal_macros = "1.17"
serde_yaml = "0.8"
surf = { version = "2.3", features = ["hyper-client"] }
surf-vcr = "0.2.0"
tokio = { version = "1.14", features = ["full"] }
url = "2.*"
